syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;
import "ProtoSessionRequestMessage.proto";
import "ProtoSessionReplyMessage.proto";
import "ProtoTransferRequestMessage.proto";
import "ProtoTransferReplyMessage.proto";
import "ProtoTransferDispatchMessage.proto";
import "ProtoTransferConfirmationMessage.proto";
import "ProtoTerminationMessage.proto";

message ProtoMessageWrapper {

  oneof msg {
    ProtoSessionRequestMessage session_request_message = 1;
    ProtoSessionReplyMessage session_reply_message = 2;
    ProtoTransferRequestMessage transfer_request_message = 3;
    ProtoTransferReplyMessage transfer_reply_message = 4;
    ProtoTransferDispatchMessage transfer_dispatch_message = 5;
    ProtoTransferConfirmationMessage transafer_confirmation_message = 6;
    ProtoTerminationMessage termination_message = 7;

    int32 reserved_field =999;
  }

  string signature = 1000;
}
