syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;
import "ProtoVaspInfo.proto";
import "ProtoMessage.proto";

message ProtoSessionRequestMessage {

  ProtoMessage message = 1;

  string topic_a = 2;

  string ecdsh_pub_key = 3;

  string comment = 4;

  ProtoVaspInfo vasp_info = 5;
}
